tenant support in update-device and update-virtual-machine
