# pkg/tool/gonetboxd/server/update_device.go
@@ -31,6 +31,12 @@ func (s *Server) UpdateDevice(
 		}
 	}
 
+	if r.Body.Tenant != nil {
+		if _, e := s.client.SetDeviceTenant(r.Name, *r.Body.Tenant); e != nil {
+			return server.UpdateDevice500JSONResponse(*s.captureDetail(e)), nil
+		}
+	}
+
 	if r.Body.Serial != nil {
 		if _, e := s.client.SetDeviceSerial(r.Name, *r.Body.Serial); e != nil {
 			return server.UpdateDevice500JSONResponse(*s.captureDetail(e)), nil
